
2008-Mar-31 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+all
    Tweaked class MsgPanel so that the screen drawing only happens from
    its OnPaint() function.
+pcbnew
    Added virtual BOARD_ITEM::Draw() and forced all BOARD_ITEM derived classes
    to implement it so that all these functions are also virtual.
    Made the offset argument default to the new wxPoint BOARD_ITEM::ZeroOffset


2008-Mar-30 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema
    Solved: eeschema crashes when create a new sheet, using the default filename and enter it.
    Solved: eeschema crashes when delete a sheet label (pin sheet), undo this and move the label.
    (bad value (not updated) for the DrawSheetLabelStruct.m_Parent member after redo command in sheet edit).

+all:
    Added comments in gestfich.cpp to explain the default paths used by kicad to find help files and lib files


2008-Mar-30 UPDATE  Jonas Diemer <diemer-at-gmx.de>
================================================================================
+eeschema
    Removed artifacts resulting from redraws in XOR-Mode.

2008-Mar-24 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew
    Ensure graphic and footprint texts have a sufficient size to be seen on screen.
    (bug 1909165, due to text on edge layer with a 0 value for X size)

2008-Mar-22 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew
    Netlist dialog redesigned, netlist.cpp code modified
    and added an option to remove not locked footprints
    when not found in netlist


2008-Mar-21 UPDATE   Dick Hollenbeck <dick@softplc.com>