@@ -217,17 +217,6 @@ void Trace_Segment( WinEDA_DrawPanel* panel, wxDC* DC, TRACK* track, int draw_mo
 }
 
 
-/**************************************************************************/
-void Trace_DrawSegmentPcb( WinEDA_DrawPanel* panel, wxDC* DC,
-                           DRAWSEGMENT* PtDrawSegment, int draw_mode )
-/**************************************************************************/
-{
-    // @todo Replace all calls to Trace_DrawSegmentPcb() with this call:
-
-    PtDrawSegment->Draw( panel, DC, draw_mode );
-}
-
-
 /*****************************************************************************************/
 void Affiche_DCodes_Pistes( WinEDA_DrawPanel* panel, wxDC* DC, BOARD* Pcb, int drawmode )
 /*****************************************************************************************/
